--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,4 +11,6 @@ mybatis-plus:
     db-config:
       #主键类型  AUTO:"数据库ID自增", INPUT:"用户输入ID", ID_WORKER:"全局唯一ID (数字类型唯一ID)", UUID:"全局唯一ID UUID";
       id-type: auto
+knife4j:
+  enable: true
 
