--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,11 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+            <version>2.3.7.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
