--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <gson.version>2.8.5</gson.version>
         <fastjson.version>1.2.31</fastjson.version>
         <mapstruct.version>1.3.0.Final</mapstruct.version>
+        <redisson.version>3.16.0</redisson.version>
     </properties>
 
     <dependencies>
@@ -144,6 +145,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
             <version>2.3.7.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>3.13.6</version>
         </dependency>
     </dependencies>
 
