1：添加mapstruct处理类型转换 2：邮件发送类

--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,11 @@
             <artifactId>redisson-spring-boot-starter</artifactId>
             <version>3.13.6</version>
         </dependency>
+        <!-- 邮件-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
