--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -16,8 +16,15 @@ spring:
         max-wait: -1ms # 连接池最大阻塞等待时间（使用负值表示没有限制）
         max-idle: 10 # 连接池最大空闲连接
         min-idle: 5  # 连接池最小空闲连接
+  mail:
+    host: smtp.qq.com
+    port: 587
+    username:
+    password:
+    default-encoding: utf-8
 
-#spring.main.allow-bean-definition-overriding: true
+
+  #spring.main.allow-bean-definition-overriding: true
 #  #显示sql
 #spring.shardingsphere.props.sql.show: true
 #
