--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <lombok.version>1.18.12</lombok.version>
-        <commons-lang3.version>3.0</commons-lang3.version>
+        <commons-lang3.version>3.7</commons-lang3.version>
         <mysql.connection.java.version>8.0.17</mysql.connection.java.version>
         <mybatis-plus.version>3.2.0</mybatis-plus.version>
         <swagger.version>3.0.0</swagger.version>
@@ -146,7 +146,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
-            <version>2.3.7.RELEASE</version>
         </dependency>
 
         <dependency>
@@ -176,6 +175,12 @@
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-spring</artifactId>
             <version>${shiro.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.lmax</groupId>
+            <artifactId>disruptor</artifactId>
+            <version>3.4.2</version>
         </dependency>
     </dependencies>
 
