--- a/pom.xml
+++ b/pom.xml
@@ -182,7 +182,30 @@
             <artifactId>disruptor</artifactId>
             <version>3.4.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.basis</groupId>
+            <artifactId>basis-core</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
+
+    <distributionManagement>
+        <repository>
+            <id>private-releases</id>
+            <name>maven私服</name>
+            <url>http://127.0.0.1:8081/repository/maven-releases/</url>
+            <uniqueVersion>false</uniqueVersion>
+        </repository>
+    </distributionManagement>
+
+    <repositories>
+        <repository>
+            <id>private-releases</id>
+            <name>local private nexus</name>
+            <url>http://127.0.0.1:8081/repository/maven-releases/</url>
+        </repository>
+    </repositories>
 
     <build>
         <plugins>
